--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>オリパ設計シミュレータークラウド v1.0</title>
+    <title>オリパ設計シミュレーターオンライン v1.0</title>
     <style>
         :root {
             --sf-blue: #007AFF;
@@ -548,7 +548,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>オリパ設計シミュレータークラウド <span class="version-badge">v1.0</span></h1>
+        <h1>オリパ設計シミュレーターオンライン <span class="version-badge">v1.0</span></h1>
         
         <div class="main-grid">
             <div class="left-panel">
