--- a/index.html
+++ b/index.html
@@ -703,6 +703,17 @@
                         🔄 一覧を更新
                     </button>
 
+                    <!-- 共有リンク生成セクション -->
+                    <div style="margin-top: 16px; padding-top: 16px; border-top: 1px solid var(--sf-gray-5);">
+                        <label style="display: block; font-weight: 500; color: var(--sf-black); margin-bottom: 8px; font-size: 14px;">
+                            🔗 リンク共有
+                        </label>
+                        <button class="btn btn-accent" onclick="generateShareLink()" style="width: 100%; font-size: 12px;" id="shareBtn" disabled>
+                            📋 共有リンクをコピー
+                        </button>
+                        <div id="shareStatus" style="margin-top: 8px; font-size: 11px; color: var(--sf-gray); text-align: center;"></div>
+                    </div>
+
                     <div id="cloudStatus" style="margin-top: 12px; font-size: 12px; color: var(--sf-gray);"></div>
                 </div>
             </div>
@@ -2373,11 +2384,156 @@ function deleteSelectedCloudConfig() {
   });
 }
 
+// URLパラメータから設定IDを取得
+function getConfigIdFromURL() {
+  const urlParams = new URLSearchParams(window.location.search);
+  return urlParams.get('config');
+}
+
+// URLパラメータで指定された設定を自動読み込み
+function loadConfigFromURL() {
+  const configId = getConfigIdFromURL();
+  if (!configId) return;
+
+  updateCloudStatus(`共有設定「${configId}」を読み込み中...`);
+
+  database.ref('configs/' + configId).once('value').then((snapshot) => {
+    const configData = snapshot.val();
+    if (configData && configData.data) {
+      loadConfig(configData.data);
+      currentCloudConfigId = configId;
+      document.getElementById('updateCloudBtn').disabled = false;
+      document.getElementById('cloudConfigName').value = configId;
+
+      // セレクトボックスの選択状態も更新
+      const selectBox = document.getElementById('cloudConfigList');
+      if (selectBox) {
+        selectBox.value = configId;
+      }
+
+      updateCloudStatus(`共有設定「${configId}」を読み込みました`);
+
+      // 成功メッセージを表示
+      setTimeout(() => {
+        alert(`🔗 共有された設定「${configId}」を読み込みました！\n\n設定を編集して「上書き更新」すると、元の設定に反映されます。\n「別名保存」で新しい設定として保存することもできます。`);
+      }, 500);
+    } else {
+      updateCloudStatus(`共有設定「${configId}」が見つかりませんでした`);
+      alert(`❌ 共有設定「${configId}」が見つかりませんでした。\n\n設定が削除されているか、設定名が正しくない可能性があります。`);
+    }
+  }).catch((error) => {
+    updateCloudStatus('共有設定の読み込みに失敗しました: ' + error.message);
+    alert(`❌ 共有設定の読み込みに失敗しました。\n\nエラー: ${error.message}`);
+  });
+}
+
+// 共有リンクを生成してクリップボードにコピー
+function generateShareLink() {
+  if (!currentCloudConfigId) {
+    alert('共有する設定を選択または保存してください');
+    return;
+  }
+
+  const baseUrl = window.location.origin + window.location.pathname;
+  const shareUrl = `${baseUrl}?config=${encodeURIComponent(currentCloudConfigId)}`;
+
+  // クリップボードにコピー
+  navigator.clipboard.writeText(shareUrl).then(() => {
+    updateShareStatus('✅ リンクをクリップボードにコピーしました');
+
+    // 詳細情報をアラートで表示
+    setTimeout(() => {
+      alert(`🔗 共有リンクをコピーしました！\n\n${shareUrl}\n\nこのリンクを共有すると、他のユーザーが同じ設定を読み込むことができます。`);
+    }, 200);
+  }).catch(() => {
+    // フォールバック: モーダル表示
+    showShareLinkModal(shareUrl);
+  });
+}
+
+// 共有リンクモーダル表示（クリップボードAPIが使えない場合）
+function showShareLinkModal(shareUrl) {
+  const modal = document.createElement('div');
+  modal.style.cssText = `
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+    background: rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center;
+    z-index: 10000;
+  `;
+
+  modal.innerHTML = `
+    <div style="background: white; padding: 32px; border-radius: 16px; max-width: 500px; width: 90%;">
+      <h3 style="margin: 0 0 16px 0;">🔗 共有リンク</h3>
+      <p style="margin: 0 0 16px 0; color: #666;">以下のリンクをコピーして共有してください：</p>
+      <input type="text" value="${shareUrl}" style="width: 100%; padding: 12px; border: 1px solid #ddd; border-radius: 8px; margin-bottom: 16px;" readonly onclick="this.select()">
+      <div style="display: flex; gap: 12px;">
+        <button onclick="navigator.clipboard.writeText('${shareUrl}').then(() => { alert('コピーしました！'); document.body.removeChild(this.closest('.modal')); })" style="flex: 1; padding: 12px; background: #007AFF; color: white; border: none; border-radius: 8px; cursor: pointer;">
+          📋 コピー
+        </button>
+        <button onclick="document.body.removeChild(this.closest('.modal'))" style="flex: 1; padding: 12px; background: #8E8E93; color: white; border: none; border-radius: 8px; cursor: pointer;">
+          閉じる
+        </button>
+      </div>
+    </div>
+  `;
+
+  modal.onclick = (e) => {
+    if (e.target === modal) document.body.removeChild(modal);
+  };
+
+  document.body.appendChild(modal);
+}
+
+// 共有ステータス表示を更新
+function updateShareStatus(message) {
+  document.getElementById('shareStatus').textContent = message;
+  setTimeout(() => {
+    document.getElementById('shareStatus').textContent = '';
+  }, 3000);
+}
+
+// 共有ボタンの状態を更新
+function updateShareButtonState() {
+  const shareBtn = document.getElementById('shareBtn');
+  if (currentCloudConfigId) {
+    shareBtn.disabled = false;
+    shareBtn.textContent = `📋 「${currentCloudConfigId}」のリンクをコピー`;
+  } else {
+    shareBtn.disabled = true;
+    shareBtn.textContent = '📋 共有リンクをコピー';
+  }
+}
+
+// 既存の関数を拡張：設定保存・読み込み時に共有ボタンを更新
+const originalSaveToCloudWithName = saveToCloudWithName;
+saveToCloudWithName = function() {
+  const result = originalSaveToCloudWithName.apply(this, arguments);
+  setTimeout(() => updateShareButtonState(), 100);
+  return result;
+};
+
+const originalLoadSelectedCloudConfig = loadSelectedCloudConfig;
+loadSelectedCloudConfig = function() {
+  const result = originalLoadSelectedCloudConfig.apply(this, arguments);
+  setTimeout(() => updateShareButtonState(), 100);
+  return result;
+};
+
+const originalLoadConfigFromURL = loadConfigFromURL;
+loadConfigFromURL = function() {
+  const result = originalLoadConfigFromURL.apply(this, arguments);
+  setTimeout(() => updateShareButtonState(), 100);
+  return result;
+};
+
 // 初期化時にクラウド設定一覧を読み込み
 document.addEventListener('DOMContentLoaded', function() {
   // 既存の初期化処理の後に追加
   setTimeout(() => {
     refreshCloudConfigList();
+    // URLパラメータで設定が指定されている場合は自動読み込み
+    loadConfigFromURL();
+    // 共有ボタンの初期状態を設定
+    updateShareButtonState();
   }, 1000); // Firebaseの初期化を待つ
 });
 </script>
